@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (stalonetray-0.6.5.tar.gz) = dcfc0a96c90f56b259da7450860a17b14b829576
+RMD160 (stalonetray-0.6.5.tar.gz) = ee6ec9a7f462e6823b495d8cf0eba748ce458174
+Size (stalonetray-0.6.5.tar.gz) = 135304 bytes
